// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileTabs > renders active state 1`] = `
"<div id="test-wrapper">
  <ul class="mb-4 flex gap-6 border-b border-b-neutral-90 pb-4">
    <li class="heading-inter-17-semi-bold flex items-center cursor-pointer opacity-50 transition hover:opacity-100">Tokens
      <!--v-if-->
    </li>
    <li class="heading-inter-17-semi-bold flex items-center cursor-default">Collectibles <span class="paragraph-inter-10-semi-bold ml-2 rounded-4 border border-neutral-20 px-1 py-[1px] bg-neutral-20 text-neutral-100">2</span></li>
  </ul>
</div>"
`;

exports[`ProfileTabs > renders default state 1`] = `
"<div id="test-wrapper">
  <ul class="mb-4 flex gap-6 border-b border-b-neutral-90 pb-4">
    <li class="heading-inter-17-semi-bold flex items-center cursor-pointer opacity-50 transition hover:opacity-100">Tokens
      <!--v-if-->
    </li>
    <li class="heading-inter-17-semi-bold flex items-center cursor-pointer opacity-50 transition hover:opacity-100">Collectibles <span class="paragraph-inter-10-semi-bold ml-2 rounded-4 border border-neutral-20 px-1 py-[1px] bg-transparent text-neutral-20">2</span></li>
  </ul>
</div>"
`;
